--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -105,6 +105,23 @@ body {
 
 .share-button:hover .share__link:nth-of-type(4) {
   transition-delay: 0.4s;
+}
+
+:root {
+  font-family: sans-serif;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+}
+
+.file {
+  padding-left: 1rem;
+}
+
+details > ul {
+  padding-left: 1.5rem;
 }
 
 #contact h1 {
